Correct twitter referral link

--- a/config/locales/bt.yml
+++ b/config/locales/bt.yml
@@ -220,7 +220,7 @@ bt:
           Публикувай този линк във Фейсбук, Туитър, във твоя собствен сайт или го изпрати по електронен път на приятел.
           След като те създатат потребителски акаунти, ти ще бъдеш известен по електронен път.
       twitter: Туитър
-      twitter_link: "Опитай+Teambox+за+да+колаборираш+с+твоя+тим,+създай+потребителски+акаунт+безплатно+на+%{link}"
+      twitter_link: "Опитай%20Teambox%20за%20да%20колаборираш%20с%20твоя%20тим,%20създай%20потребителски%20акаунт%20безплатно%20на%20%{link}"
       use_money: "Може да изполваш тези пари за да получиш"
       use_money_cash: "или спечели пари в кеш."
       use_tracking_code: "Трябва да използваш код за проследяване за да можем да определим кои са потребителите привлечени от теб."
