--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -213,7 +213,7 @@ ja:
       tracking5: サインアップに必要なあなた専用のページは
       tracking6: フェースブック、Twitterやご自分のサイトにリンクを掲載したり、招待メールを知人友人に送りましょう。登録の際は、あなたにその旨の連絡がメールでいきます。
       twitter: Twitter
-      twitter_link: "Teamboxを+利用してみて下さい。+新しいプロジェクト管理の+コラボツールです。+無料で+お試し頂けます+%{link} "
+      twitter_link: "Teamboxを利%20用してみて下さい。%20新しいプロジェクト管理の%20コラボツールです。%20無料で%20お試し頂けます%20%{link} "
       use_money: この収益を次のものに使うことができます。
       use_money_cash: もしくは現金を得ます
       use_tracking_code: トラッキング・コードを利用する事により、どのユーザーがあなたの紹介ユーザーであるかを知る事が出来ます。
