--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -213,7 +213,7 @@ ru:
       tracking5: "Ваша специальная страница для регистрации "
       tracking6: "Разместите эту ссылку в Facebook, Twitter, на собственном сайте, или отправьте ее друзьям по электронной почте. После того, как они зарегистрируются, Вы получите подтверждение по электронной почте."
       twitter: Twitter
-      twitter_link: "Попробуй+Teambox+для+совместной+работы+со+своей+командой,+зарегистрируйся+бесплатно+на+%{link}"
+      twitter_link: "Попробуй%20Teambox%20для%20совместной%20работы%20со%20своей%20командой,%20зарегистрируйся%20бесплатно%20на%20%{link}"
       use_money: "Вы можете использовать эти деньги для получения"
       use_money_cash: "или заработать реальные деньги."
       use_tracking_code: "Вы должны использовать код отслеживания, чтобы мы могли знать, кто из пользователей пришел от Вас."
