"Due Today" tab for tasks
Will display all tasks late or due today on the sidebar.
If there are none, it will just not show up.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1281,6 +1281,7 @@ en:
       settings: Settings
       people: "People & Permissions"
       my_tasks: My Tasks
+      today: Due Today
       open_my_tasks: Open all my tasks
       show_all_tasks: View all tasks in my projects...
       organizations: Organizations
