--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1240,6 +1240,7 @@ en:
       no_files: There are currently no files being sycronized for this project. You may wish to install the Nomadesk client on your desktop.
       sync_info: "These files are synchronized with your computer and can be accessed by members of the Design projects organization: %{users}."
       revoke_access: "To add or revoke access to this project, including its files, visit the <a href='%{url}'>organization's people page</a>."
+      api_key: Your API key for use within the Teambox client is <em>%{api_key}</em>.
     bucket_missing:
       title: No Storage for this Organization
       info: "There is no Nomadesk Fileserver associated with your organization. Click <a href='%{url}'>here</a> to associate one."
@@ -1251,6 +1252,13 @@ en:
       existing_header: Or use and existing account
       existing_link: Click <a href='%{url}'>here</a> to add an existing Nomadesk account to your account.
       admin_only: Only an admin can link synchronized files to you account. Once your organization has enabled syncronized files you may come back and setup synchronized files for yourself.
+    bucket_created:
+      title: Bucket Created for %{organization}
+      bucket_created: A new bucket has been created for this organization. You can now syncronize files in this organization using the client.
+      client_details: You may download the Teambox syncronized files client from <a href='%{url}'>here</a>.
+      view_files: Alternatively you can navigate to your files by selected synced files within your project.
+      view_project_files: Alternatively to view the files online click <a href='%{url}'>here</a>.
+      api_key: Your API key for use within the Teambox client is <em>%{api_key}</em>.
     permission_missing: "An error occured attempting to give you permission to access this bucket. You should check with the creator of this bucket (%{creator}) they may be able to grant you permission manually via Nomadesk. %{error_message}"
     file:
       open: Open
