--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1111,6 +1111,7 @@ en:
     private:
       public: This element is visible to everybody in this project
       private: This element is only visible to people you specify...
+      private_foreveralone: This element is only visible to you
       private_global: This element is only visible to the following people...
       readonly_warning: "Only %{user} is able to change privacy settings."
   teambox_datas:
