--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -589,6 +589,7 @@ en:
     appearance_fields:
       logo_html: Logo <em>Ideally should be 134x36 pixels</em>
       description_html: HTML to be displayed on the entrance page <a href="http://help.teambox.com/faqs/more-ways-to-access-teambox/customize-organizations">Learn how to use this</a>
+      delete_custom_logo: Delete custom logo (and revert back to the Teambox one)
     index:
       about:
         title: About Organizations
