Adding localised content for upload button

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1106,6 +1106,8 @@ en:
       explain: "Click on users to @mention them in your comment. Mentioned users will receive email notifications for your message and others after it."
       popup_note_html: "Select <b>Notify people</b> to send notifications for this conversation."
       all_users: All users
+    uploads:
+      button: "Choose File"
   teambox_datas:
     new_import:
       title: "Import data"
