--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1844,6 +1844,8 @@ en:
       default: "%Y-%m-%d"
       short: "%b %d"
       long: "%B %d, %Y"
+      month_and_year: "%B %Y"
+      month_and_day: "%B %d"
     order: [ :day, :month, :year ]
 
     day_names: [Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday]
