Basic merge tasks backend code

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -855,6 +855,7 @@ en:
       hold: hold
       resolved: resolved
       rejected: rejected
+      merged: merged
     my_tasks:
       my_tasks: My tasks for all projects
     overview_box:
