Use i18n'd Untitled conversation for simple conversations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -768,6 +768,7 @@ en:
     short_conversation:
       comment: comment
       comments: comments
+    untitled: Untitled conversation
   hours:
     download: Download
     comments: Time Entries
