--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1125,6 +1125,8 @@ en:
       private_global: This element is only visible to the following people...
       readonly_warning: "Only %{user} is able to change privacy settings."
       all: "All"
+      control: Control who can see this element
+      privacy: Privacy
   teambox_datas:
     new_import:
       title: "Import data"
