Adding dropdown settings markup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1400,6 +1400,7 @@ en:
       settings: Settings
       people: "People & Permissions"
       my_tasks: My Tasks
+      my_profile: My Profile
       today: Due Today
       open_my_tasks: Open all my tasks
       all_tasks: All Tasks
